modified:   delete_domain.html

--- a/dashboard/templates/main/delete_domain.html
+++ b/dashboard/templates/main/delete_domain.html
@@ -33,7 +33,7 @@
                     <ul class="list-disc list-inside space-y-1 text-sm">
                         <li>All website files and databases</li>
                         <li>Email accounts and configurations</li>
-                        <li>SSL certificates and DNS records</li>
+                        <li>SSL certificates</li>
                         <li>All backups and snapshots</li>
                         <li>Kubernetes resources and configurations</li>
                     </ul>
